# lungDL

./: .gitignore  README.md  package-lock.json  package.json
api/: dlminiproject.ipynb  labels.json  main.py  pyproject.toml
src/: App.css  App.jsx
